# fenrir

./: .gitignore  README.md  environment.yml  fc.drawio  setup_env.bat  update_platform.bat
.github/workflows/: pages.yml
app/: CMakeLists.txt
app/inc/: CMakeLists.txt  fenrir.hpp
app/src/: CMakeLists.txt  dvxplorer.cpp  fenrir.cpp  fenrir_ctrl.c
docs/: _config.yml  about.md  index.md
docs/drawio/: inference.drawio  svg.ipynb
docs/implementation/: index.md  qsnn.md  snn.md
docs/notes/: index.md  lif_hdl.md  neuron_memory_hdl.md
docs/petalinux/: 01_host_setup.md  02_project_configuration.md  03_build_and_deployment.md  04_on_target_development.md  05_troubleshooting.md  index.md
drawio/: fc.drawio  fc_layer.drawio
hdl/: lif_neuron.vhd
pyfenrir/: .gitignore  config.yaml  main.py  sync_cluster.sh
pyfenrir/src/: model.py  network_utils.py  utils.py
python/: mnist.ipynb  nmnist.ipynb  pyproject.toml  test_network.ipynb
python/conv_test_scripts/: kernel_w_gen.py  kernel_weights.json  kernel_weights.mem  kernel_weights.npy  snn_test_events.json  snn_test_events.mem  snn_test_torch_input.npy  snn_test_torch_metadata.json  test_gen.py
python/lib/: Controller.py  hwcomponents_tutorial.ipynb
python/models/: gesture_1layer.pth  gesture_fenrir_1.pth  mnist.pth  mnist_2layer.pth  nmnist_1layer.pth  nmnist_3layer.pth
python/notebooks/: conv_mockup.ipynb  conv_verify.ipynb  dvs_gesture.ipynb  export.ipynb  gesture_data.txt  gesture_data_target_1.h  kernel_weights.mem  mnist.ipynb  nmnist.ipynb  nmnist_1layer.ipynb  report.ipynb  test_mem.mem
python/pyfenrir/: __init__.py  network.py  network_utils.py  utils.py
python/test_data/: 2b_fixed _fenrir_dvsgesture_FenrirNet_best.pth  2b_fixed_gradient_norms_log.txt  2b_fixed_loss_lr_data.csv  2b_gradient_norms_log.txt  2b_loss_lr_data.csv  4b_fenrir_dvsgesture_FenrirNet_best.pth  4b_fixed_gradient_norms_log.txt  4b_fixed_loss_lr_data.csv  8b_fenrir_dvsgesture_FenrirNet_best.pth  8b_fixed_fenrir_dvsgesture_FenrirNet_best.pth  8b_fixed_gradient_norms_log.txt  8b_fixed_loss_lr_data.csv  8b_gradient_norms_log.txt  8b_loss_lr_data.csv
snn-tutorials/: tutorial_1.ipynb
snn_gesture_trainer/: config.yaml  main.py
snn_gesture_trainer/models/: fenrir_dvsgesture_FenrirFC_best.pth
snn_gesture_trainer/src/: __init__.py  data_utils.py  export.py  model.py  network_utils.py  trainer.py  utils.py
snntorch/: environment.yml  gesture.ipynb  pyproject.toml  test_env.py
snntorch/convolution/: .gitignore  Dockerfile  conv_nets.py  dummytets.py  dvsnmist_conv_pool.ipynb  dvsnmist_conv_pool.py  export_weights.py  (+23 more)
typst/: references.bib
vitis/: .gitignore
vivado/: .keep  build.bat  build.tcl
(+503 files in other folders)
