[tool.poetry]
name            = "dvs-fpga"
version         = "0.1.0"
description     = "Python environment for snntorch."
authors         = ["andreasp <andreas.s.p00@gmail.com>"]
package-mode    = false

[tool.poetry.dependencies]
python          = "^3.12"
numpy           = "<2.0.0"
matplotlib      = "^3.9.2"
torch           = {version = "^2.7.0+cu128",  source="torch-gpu"}
torchvision     = {version = "^0.22.0+cu128", source="torch-gpu"}
torchaudio      = {version = "^2.7.0+cu128",  source="torch-gpu"}
jupyterlab      = "^4.2.5"
scikit-learn    = "^1.5.1"
mlxtend         = "^0.23.1"
torch-summary   = "^1.4.5"
pillow          = "^10.4.0"
torchviz        = "^0.0.2"
tqdm            = "^4.66.5"
ipywidgets      = "^8.1.5"
shapely         = "^2.0.6"
neptune         = "^1.13.0"
neptune-pytorch = "^2.0.0"
graphviz        = "^0.20.3"
albumentations  = "^1.4.21"
scikit-image    = "^0.24.0"
terminaltables  = "^3.1.10"
imgaug          = "^0.4.0"
pycocotools     = "^2.0.8"
tidecv          = "^1.0.1"
ray = {extras   = ["data", "serve", "train", "tune"], version = "^2.40.0"}
optuna          = "^4.1.0"
snntorch        = "^0.9.1"
ffmpeg          = "^1.4"
tonic           = "^1.6.0"
brevitas        = "^0.11.0"

[[tool.poetry.source]]
name            = "torch-gpu"
url             = "https://download.pytorch.org/whl/cu128"
priority        = "explicit"

[build-system]
requires        = ["poetry-core"]
build-backend   = "poetry.core.masonry.api"
